# MyClang

./: CMakeLists.txt  README.md  check_names.cpp  print.h  run_tests.sh
